--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(catch tools)
 
 add_executable(dist_sort chapter01/disk_sort.cpp tools/Tools.cpp)
+add_executable(find_unexisted chapter02/find_unexisted.cpp tools/Tools.cpp)
